fix mobile avatar spacing

--- a/style.scss
+++ b/style.scss
@@ -187,6 +187,7 @@ img + em {
     float: none;
     display: block;
     margin: 0 auto;
+    margin-bottom: 10px;
   }
 
   img {
